--- a/gr.css
+++ b/gr.css
@@ -31,3 +31,24 @@
     width: 100%;
     height: auto;
 }
+
+@media(max-width: 900px){
+    .GR-header{
+        margin-left: 5%;
+        margin-right: 5%;
+    }
+    .technik{
+        padding: 10px;
+        margin: 10px;
+    }
+}
+@media(max-width: 400px){
+    .GR-header{
+        margin-left: 1%;
+        margin-right: 1%;
+    }
+    .technik{
+        padding: 5px;
+        margin: 0;
+    }
+}
